Notes file updated

--- a/notes.conf
+++ b/notes.conf
@@ -13,3 +13,9 @@ TODOs
         -   Print instructions table/grid
         -   Additional instructions section
         -   Office Staff only section
+        -   Animations
+        -   Javascript and CSS to create Animations
+
+4.  About Page
+        -   image
+        -   split column layout
