Index.htm updated with Requesting Officers Details, Notes.conf updated and jQuery library added to a folder called lib

--- a/notes.conf
+++ b/notes.conf
@@ -8,14 +8,24 @@ TODOs
 2.  Navbar
         -   2 links and a name
     
-3.  Main Page
+3.  Main Request Page
         -   Requesting Officer Details
         -   Print instructions table/grid
         -   Additional instructions section
+        -   Generate a request ID
         -   Office Staff only section
         -   Animations
         -   Javascript and CSS to create Animations
 
-4.  About Page
+4.  Request Processing Page
+        -   validate Request
+        -   confirmed job completion (emails the originator of the request)
+        -   update the job being collected
+        -   
+
+5.  Print Management Page
+        -   
+
+6.  About Page
         -   image
         -   split column layout
